overflow actually fixed

--- a/Digital_Portfolio/styles.css
+++ b/Digital_Portfolio/styles.css
@@ -274,23 +274,30 @@ body {
         height: 30vh;
     }
 
+    .works {
+        overflow: hidden;
+    }
+
     .works_links_container {
         display: grid;
         height: 80%;
         grid-template-rows: 33% 33% 33%;
         grid-template-columns: auto;
     }
-
+    
     .works_img p {
+        top: auto;
         color: rgb(204, 204, 204);
         margin-top: 15px;
     }
 
+    .works_img {
+        overflow: hidden;
+    }
+    
     .works_img img {
         width: 100%;
-        height: 200%;
         transition: .5s;
-        overflow-y: hidden;
     }
 
 }
